# rematrix

./: .dir-locals.el  .gitignore  CMakeLists.txt  GNUmakefile  LICENSE  README.md  buffer.cpp  buffer.hpp  decl.hpp  font_descr.hpp  frame_buffer.cpp  frame_buffer.hpp  main.cpp  matrix.hpp  options.cpp  options.hpp  program.cpp  program.hpp  rematrix.cpp  render_context.cpp  render_context.hpp  rendering_context.cpp  rendering_context.hpp  resources.cpp  resources.cpp.sh  resources.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
cmds/: font  font_descr  font_descr2
data/: blur_frag.glsl  blur_vertex.glsl  combine_frag.glsl  combine_vertex.glsl  font.fnt  font.json  font1.fnt  font2.fnt  frag.glsl  fragment.glsl  vertex.glsl
images/: makeimgs
